--- a/index.html
+++ b/index.html
@@ -8,15 +8,33 @@
 </head>
 <body>
     <div class="container">
-        <div class="form-box" id="login-form">
+        <div class="form-box active" id="login-form">
             <form action="">
                 <h2>Login</h2>
-                <input type="email" name="email" placeholder="email" required>
-                <input type="password" name="password" placeholder="password" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
                 <button type="submit" name="login">login</button>
-                <p>Don't have and account? <a href="#">Resigter</a></p>
+                <p>Don't have and account? <a href="#" onclick="showForm('register-form')">Resigter</a></p>
+            </form>
+        </div>
+
+        <div class="form-box" id="register-form">
+            <form action="">
+                <h2>Register</h2>
+                <input type="text" name="name" placeholder="Name" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <select name="role">
+                    <option value="">Select role</option>
+                    <option value="user">User</option>
+                    <option value="admin">Admin</option>
+                </select>
+                <button type="submit" name="register">register</button>
+                <p>Already have and account? <a href="#" onclick="showForm('login-form')">Login</a></p>
             </form>
         </div>
     </div>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
